--- a/index.html
+++ b/index.html
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+  <link rel="stylesheet" href="css/style.css">
+
+  <title>Uploader</title>
 </head>
+
 <body>
 
+  <header>
+    <div class="header_titulo">
+      <h1>Uploader</h1>
+    </div>
+  </header>
+
+  <div class="cuerpo">
+
+    <div class="cuerpo_formulario">
+
+      <form action="/action_page.php">
+        <label for="fname">Usuario</label>
+        <input type="text" id="fname" name="firstname" placeholder="Tu usuario">
+
+        <label for="lname">Contraseña</label>
+        <input type="password" id="lname" name="lastname" placeholder="Contraseña">
+
+          <input type="submit" value="Ingresar">
+
+      <div class="formulario_registro">
+        <h5>No soy un usuario registrado</h5><a href="#">Registrarse aqui</a>
+      </div>
+
+      </form>
+
+    </div>
+  </div>
+
+  <footer>
+    <div class="footer_legenda">
+      <h5>2022 - Todos los derechos reservados</h5>
+    </div>
+
+  </footer>
 </body>
+
 </html>
