--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/index.css">
 
   <title>Uploader</title>
 </head>
@@ -33,7 +33,7 @@
           <input type="submit" value="Ingresar">
 
       <div class="formulario_registro">
-        <h5>No soy un usuario registrado</h5><a href="#">Registrarse aqui</a>
+        <h5>No soy un usuario registrado</h5><a href="pages/perfil.html">Registrarse aqui</a>
       </div>
 
       </form>
