--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -16,7 +16,7 @@
 <body>
   <header>
     <div class="header_titulo">
-      <h1> <a href="#"> Uploader </a></h1>
+      <h1> <a href="../index.html"> Uploader </a></h1>
     </div>
   </header>
 
