--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
         <label for="lname">Contraseña</label>
         <input type="password" id="lname" name="lastname" placeholder="Contraseña">
 
-          <input type="submit" value="Ingresar">
+      <button type="submit" name="button">Ingresar</button>
+
+        
 
       <div class="formulario_registro">
         <h5>No soy un usuario registrado</h5><a href="pages/perfil.html">Registrarse aqui</a>
