--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -36,7 +36,7 @@
       <div class="cuerpo_usuario">
         <h2>Usuario</h2>
       </div>
-      <button type="button" name="button">Editar Perfil</button>
+      <a href="modperfil/editportada.html">  <button type="button" name="button">Editar Perfil</button></a>
       <div class="cuerpo_linea"></div>
       <div class="cuerpo_informacion">
 
@@ -180,7 +180,6 @@
 
 
 
-  <footer></footer>
 </body>
 
 </html>
