--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -16,8 +16,9 @@
 <body>
   <header>
     <div class="header_titulo">
-      <h1> <a href="../index.html"> Uploader </a></h1>
+      <h1> <a href="inicio.html"> Uploader </a></h1>
     </div>
+
   </header>
 
   <div class="cuerpo">
