--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -31,7 +31,7 @@
         <a href="perfil.html"><img src="../media/perfil.jpg" alt=""></a>
       </div>
       <div class="publicacion_texto">
-        <input type="text" name="" value="">
+        <a href="modperfil/publicacion.html"> <input type="text" name="" value="" placeholder="¿Que estas pensando?"> </a>
       </div>
 
     </div>
