--- a/pages/modperfil/publicacion.html
+++ b/pages/modperfil/publicacion.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,16 +12,44 @@
   <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
   <title>UPLOADER / Publicacion</title>
 </head>
+
 <body>
 
   <header>
     <div class="header_titulo">
-      <h1> <a href="../../index.html"> Uploader </a></h1>
+      <h1> <a href="../inicio.html"> Uploader </a></h1>
     </div>
     <h2> <a href="../inicio.html"> Volver </a></h2>
   </header>
 
+  <div class="cuerpo">
 
+
+    <div class="cuerpo_publicacion2">
+      <div class="cuerpo_publicacion2Titutlo">
+        <h1>Crear publicacion</h1>
+      </div>
+
+      <div class="cuerpo_linea"></div>
+        <form class="" action="#" method="post">
+
+      <div class="cuerpo_publicacionPerfil">
+        <a href="perfil.html"><img src="../../media/perfil.jpg" alt=""></a>
+        <h1>usuario</h1>
+      </div>
+      <div class="cuerpo_linea"></div>
+      <div class="publicacion2_formulario">
+
+          <textarea name="name" rows="8" cols="80" placeholder="¿Que estas pensando?"></textarea>
+          <div class="cuerpo_linea"></div>
+          <button type="button" name="button">Publicar</button>
+        </form>
+      </div>
+
+    </div>
+
+  </div>
 
 </body>
+
 </html>
