--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -16,7 +16,7 @@
 <body>
   <header>
     <div class="header_titulo">
-      <h1> <a href="../inicio.html"> Uploader </a></h1>
+      <h1> <a href="#"> Uploader </a></h1>
     </div>
     <div class="header_perfil">
       <a href="perfil.html"><img src="../media/perfil.jpg" alt=""></a>
@@ -75,7 +75,7 @@
 
       </div>
     </div>
-    
+
   </div>
 </body>
 
