--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -59,7 +59,8 @@
       </div>
       <button type="button" name="button">Editar detalles</button>
       <div class="cuerpo_linea"></div>
-      <button type="button" name="button">Subir archivo</button>
+
+    <a href="modperfil/subir.html">  <button type="button" name="button">Subir archivo</button></a>
 
 
       <div class="cuerpo_archivossubidos">
