--- a/pages/modperfil/editportada.html
+++ b/pages/modperfil/editportada.html
@@ -40,7 +40,7 @@
       <div class="cuerpo_linea"></div>
 
       <div class="cuerpo_editarportada">
-        <h1>Aqui puedes editar tu fotos de perfil o portada</h1>
+        <h1>Aqui puedes editar tus fotos de perfil o portada</h1>
       </div>
       <div class="cuerpo_linea"></div>
       <div class="cuerpo_botonesDeEdicion">
