--- a/pages/modperfil/publicacion.html
+++ b/pages/modperfil/publicacion.html
@@ -34,7 +34,7 @@
         <form class="" action="#" method="post">
 
       <div class="cuerpo_publicacionPerfil">
-        <a href="perfil.html"><img src="../../media/perfil.jpg" alt=""></a>
+        <a href="../perfil.html"><img src="../../media/perfil.jpg" alt=""></a>
         <h1>usuario</h1>
       </div>
       <div class="cuerpo_linea"></div>
